# Robotics_Cape_archive

./: .gitignore  compile_flyMS.sh
examples/bare_minimum/: bare_minimum
examples/battery_monitor/: battery_monitor
examples/bind_dsm2/: Makefile  bind_dsm2
examples/blink/: blink
examples/calibrate_dsm2/: Makefile  calibrate_dsm2MS  calibrate_dsm2MS.c  dsm2MS.c
examples/calibrate_escs/: calibrate_escs  calibrate_escs.c
examples/calibrate_gyro/: calibrate_gyro
examples/flyMS/: CMakeLists.txt  Makefile  Makefile1  barometer.h  dsm2MS.c  flyMS  flyMS.c  gps.c  gps.c.save  kalman.c  logger.c  logger.h  nohup.out  read_data.m
examples/flyMS/include/: filter.h  flight_defs.h  flyMS.h  gps.h  kalman.h  linear_algebra.h
examples/flyMS/src/: barometer.h  config.c  config.h  dsm2MS.c  filter.c  filter.h  flyMS.c  flyMS.h  gps.c  gps.h  kalman.c  kalman.h  linear_algebra.h  linear_algebraMS.c  logger.c  logger.h  misc_functions.c
examples/flyMS/src/radar/: mavlink_udp  mavlink_udp.c
examples/flyMS/src/radar/custom/: Makefile  aurora.xml  radar.py  radar.xml
examples/flyMS/src/radar/custom/aurora/: aurora.h  mavlink.h  mavlink_msg_radar_filtered.h  testsuite.h  version.h
examples/flyMS/src/radar/custom/common/: version.h
examples/flyMS/src/radar/custom/python/: period.py  radar_test.py
examples/flyMS/src/radar/custom/radar/: mavlink.h  mavlink_msg_radar.h  mavlink_msg_radar_command.h  mavlink_msg_radar_distance.h  mavlink_msg_radar_param.h  radar.h  testsuite.h  version.h
examples/test_adc/: test_adc
libraries/: robotics_cape.h  robotics_cape_defs.h
(+38 files in other folders)
